...
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/view_inventory"
        android:visibility="visible" />

    <Button
        android:id="@+id/add_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_inventory"
        android:visibility="invisible" />
</LinearLayout>
